<resources>
    <string name="app_name">Cryptocurrency Trading Simulator</string>
    <string name="menu_crypto_list">Cryptocurrencies</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_achievements">Achievements</string>
    <string name="item_crypto_icon">Crypto Item Icon</string>
    <string name="chart_radio_label_1d">1D</string>
    <string name="chart_radio_label_7d">7D</string>
    <string name="chart_radio_label_14d">14D</string>
    <string name="chart_radio_label_1m">1M</string>
    <string name="chart_radio_label_3m">3M</string>
    <string name="chart_radio_label_6m">6M</string>
    <string name="chart_radio_label_1y">1Y</string>
    <string name="additional_info_market_cap_label">Market Cap</string>
    <string name="additional_info_volume_label">Total Volume</string>
    <string name="additional_info_ath_label">All Time High</string>
    <string name="additional_info_24h_high_label">24 Hour High</string>
    <string name="additional_info_24h_low_label">24 Hour Low</string>
    <string name="additional_info_atl_label">All Time Low</string>
    <string name="additional_info_price_change_percent_label">Price Change 24h %</string>
    <string name="additional_info_price_change_label">Price Change 24h</string>
    <string name="menu_search">Search</string>
    <string name="tab_favorite">Favorite</string>
    <string name="tab_all">All</string>
    <string name="tab_info">Info</string>
    <string name="tab_actions">Actions</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setNotificationLabel">"Notify when price reaches "</string>
    <string name="setNotificationButton">Set</string>
    <string name="currentlySetNotification">Currently set notification:</string>
    <string name="currentlyOwned">Currently owned %1$s worth %2$s</string>
    <string name="headerIncome">Income</string>
    <string name="headerAmount">Amount</string>
    <string name="headerPrice">Price</string>
    <string name="headerBalance">Balance</string>
    <string name="headerOwned">Owned</string>
    <string name="headerDate">Date</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="account_balance">Account balance: </string>
    <string name="ownedCrypto">Owned Cryptocurrencies</string>
    <string name="headerWorth">Worth</string>
    <string name="headerCrypto">Crypto</string>
</resources>