<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.CryptoFragment">

    <data>

        <variable
            name="viewModel"
            type="com.example.cryptocurrencytradingsimulator.viewmodels.CryptoViewModel" />

        <variable
            name="crypto"
            type="com.example.cryptocurrencytradingsimulator.data.models.Crypto" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/additionalInfoCardView"
            style="@style/card_views"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TableLayout
                android:id="@+id/cryptoAdditionalInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*">

                <TableRow
                    android:layout_width="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1">

                    <androidx.cardview.widget.CardView
                        style="@style/additional_info_card_view"
                        android:layout_marginTop="0dp">

                        <LinearLayout style="@style/additional_info_block">

                            <TextView
                                android:id="@+id/caiMarketCapLabel"
                                style="@style/additional_info_label"
                                android:text="@string/additional_info_market_cap_label" />

                            <TextView
                                android:id="@+id/caiMarketCap"
                                style="@style/additional_info_elem" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        style="@style/additional_info_card_view"
                        android:layout_marginTop="0dp">

                        <LinearLayout style="@style/additional_info_block">

                            <TextView
                                android:id="@+id/caiVolumeLabel"
                                style="@style/additional_info_label"
                                android:text="@string/additional_info_volume_label" />

                            <TextView
                                android:id="@+id/caiVolume"
                                style="@style/additional_info_elem" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </TableRow>

                <TableRow
                    android:layout_width="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1">


                    <androidx.cardview.widget.CardView style="@style/additional_info_card_view">

                        <LinearLayout style="@style/additional_info_block">

                            <TextView
                                android:id="@+id/caiPriceChangeLabel"
                                style="@style/additional_info_label"
                                android:text="@string/additional_info_price_change_label" />

                            <TextView
                                android:id="@+id/caiPriceChange"
                                style="@style/additional_info_elem" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView style="@style/additional_info_card_view">

                        <LinearLayout style="@style/additional_info_block">

                            <TextView
                                android:id="@+id/caiPriceChangePercentLabel"
                                style="@style/additional_info_label"
                                android:text="@string/additional_info_price_change_percent_label" />

                            <TextView
                                android:id="@+id/caiPriceChangePercent"
                                style="@style/additional_info_elem" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </TableRow>

                <TableRow
                    android:layout_width="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1">

                    <androidx.cardview.widget.CardView style="@style/additional_info_card_view">

                        <LinearLayout style="@style/additional_info_block">

                            <TextView
                                android:id="@+id/caiAthLabel"
                                style="@style/additional_info_label"
                                android:text="@string/additional_info_ath_label" />

                            <TextView
                                android:id="@+id/caiAth"
                                style="@style/additional_info_elem" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>


                    <androidx.cardview.widget.CardView style="@style/additional_info_card_view">

                        <LinearLayout style="@style/additional_info_block">

                            <TextView
                                android:id="@+id/caiAtlLabel"
                                style="@style/additional_info_label"
                                android:text="@string/additional_info_atl_label" />

                            <TextView
                                android:id="@+id/caiAtl"
                                style="@style/additional_info_elem" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </TableRow>

                <TableRow
                    android:layout_width="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1">


                    <androidx.cardview.widget.CardView
                        style="@style/additional_info_card_view"
                        android:layout_marginBottom="0dp">

                        <LinearLayout style="@style/additional_info_block">

                            <TextView
                                android:id="@+id/cai24HighLabel"
                                style="@style/additional_info_label"
                                android:text="@string/additional_info_24h_high_label" />

                            <TextView
                                android:id="@+id/cai24High"
                                style="@style/additional_info_elem" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        style="@style/additional_info_card_view"
                        android:layout_marginBottom="0dp">

                        <LinearLayout style="@style/additional_info_block">

                            <TextView
                                android:id="@+id/cai24LowLabel"
                                style="@style/additional_info_label"
                                android:text="@string/additional_info_24h_low_label" />

                            <TextView
                                android:id="@+id/cai24Low"
                                style="@style/additional_info_elem" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </TableRow>
            </TableLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/card_views"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/chartLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioGroup
                    android:id="@+id/chartRange"
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <RadioButton
                        android:id="@+id/radioButton1"
                        style="@style/radio_buttons"
                        android:background="@drawable/custom_radio_button_selector_left"
                        android:checked="true"
                        android:text="@string/chart_radio_label_1d" />

                    <RadioButton
                        android:id="@+id/radioButton2"
                        style="@style/radio_buttons"
                        android:text="@string/chart_radio_label_7d" />

                    <RadioButton
                        android:id="@+id/radioButton3"
                        style="@style/radio_buttons"
                        android:text="@string/chart_radio_label_14d" />

                    <RadioButton
                        android:id="@+id/radioButton4"
                        style="@style/radio_buttons"
                        android:text="@string/chart_radio_label_1m" />

                    <RadioButton
                        android:id="@+id/radioButton5"
                        style="@style/radio_buttons"
                        android:text="@string/chart_radio_label_3m" />

                    <RadioButton
                        android:id="@+id/radioButton6"
                        style="@style/radio_buttons"
                        android:text="@string/chart_radio_label_6m" />

                    <RadioButton
                        android:id="@+id/radioButton7"
                        style="@style/radio_buttons"
                        android:text="@string/chart_radio_label_1y" />
                </RadioGroup>

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/lineChart"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/chartRange" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</layout>