<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.ProfileFragment">

        <androidx.cardview.widget.CardView style="@style/card_views">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_balance"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/accountBalance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/card_views"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/balanceChart"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/card_views"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/ownedCrypto" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <TextView
                        style="@style/list_header"
                        android:text="@string/headerCrypto" />

                    <TextView
                        style="@style/list_header"
                        android:text="@string/headerAmount" />

                    <TextView
                        style="@style/list_header"
                        android:text="@string/headerWorth" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/ownedList"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</layout>